syntax = "proto3";

service TaskService {
    rpc JoinOrganizationUponCreation(JoinOrgExchange) returns (JoinOrgExchangeConfirmation) { }
    rpc AddUserDataToTaskListForProject(ListOfUserIdsInOrder) returns (ListOfUserDataInOrder) { }
}

message ListOfUserIdsInOrder {
    repeated string userList = 1;
}

message ListOfUserDataInOrder {
    repeated string first_name = 1;
}

message AuthorId {
    string authorId = 1;
}

message User {

    string first_name = 1;

}

message JoinOrgExchange {
    string userId = 1;
    int32 organizationId = 2;
}

message JoinOrgExchangeConfirmation {
    bool accepted = 1;
}
